iso can also be set now. full function lightMeter ready

--- a/LightMeter/res/values/strings.xml
+++ b/LightMeter/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="continue_btn">Unlock</string>
     <string name="app_name">LightMeter</string>
     <string name="apertureSpiner_prompt">Please set aperture</string>
+    <string name="isoSpiner_prompt">Please set ISO</string>
 </resources>
