--- a/LightMeter/res/values/strings.xml
+++ b/LightMeter/res/values/strings.xml
@@ -3,8 +3,10 @@
   <string name="hello">Welcome!</string>
   <string name="pause">Lock</string>
   <string name="continue_btn">Unlock</string>
-  <string name="app_name">Light Meter</string>
+  <string name="app_name">Light Meter EAP</string>
   <string name="aperture_spinner_prompt">Please set aperture</string>
   <string name="iso_spinner_prompt">Please set ISO</string>
   <string name="exposure_spinner_prompt"></string>
+  <string name="copyright">copyright © Kailuo Wang 2010 http://kaipic.com </string>
+  <string name="version">Version 1.0 Early Access Preview (EAP) </string>
 </resources>
