--- a/LightMeter/res/values/strings.xml
+++ b/LightMeter/res/values/strings.xml
@@ -7,6 +7,10 @@
   <string name="aperture_spinner_prompt">Please set aperture</string>
   <string name="iso_spinner_prompt">Please set ISO</string>
   <string name="exposure_spinner_prompt"></string>
-  <string name="copyright">copyright © Kailuo Wang 2010 http://kaipic.com </string>
+  <string name="copyright">copyright © 2010 Kailuo Wang  </string>
   <string name="version">Version 1.0 Early Access Preview (EAP) </string>
+  <string name="about">About</string>
+  <string name="ok">OK</string>
+  <string name="photo_website">Website: http://kaipic.com</string>
+  <string name="blog_website">Blog: http://kailuowang.com</string>
 </resources>
