--- a/LightMeter/res/values/strings.xml
+++ b/LightMeter/res/values/strings.xml
@@ -13,4 +13,5 @@
   <string name="ok">OK</string>
   <string name="photo_website">Website: http://kaipic.com</string>
   <string name="blog_website">Blog: http://kailuowang.com</string>
+  <string name="twitter">Twitter: @kailuowang</string>
 </resources>
