added calibrate dialog and menu button

--- a/LightMeter/res/values/strings.xml
+++ b/LightMeter/res/values/strings.xml
@@ -14,4 +14,5 @@
   <string name="photo_website">Website: http://kaipic.com</string>
   <string name="blog_website">Blog: http://kailuowang.com</string>
   <string name="twitter">Twitter: @kailuowang</string>
+  <string name="calibrate">Calibrate</string>
 </resources>
