--- a/LightMeter/res/values/strings.xml
+++ b/LightMeter/res/values/strings.xml
@@ -8,7 +8,7 @@
   <string name="iso_spinner_prompt">Please set ISO</string>
   <string name="exposure_spinner_prompt">Please set EV setting</string>
   <string name="copyright">copyright © 2010 Kailuo Wang</string>
-  <string name="version">Version 1.0</string>
+  <string name="version">Version 1.01</string>
   <string name="about">About</string>
   <string name="ok">OK</string>
   <string name="photo_website">Website: http://kaipic.com</string>
@@ -35,7 +35,7 @@
   <string name="help_usage_manual">Usage of manual exposure settings: The status message may tell you that no ambient
     light sensor found on the phone.
     In that case you can only use the manual exposure settings.
-    The manual exposure settings actually more useful than the auto one.
+    The manual exposure settings is actually more useful than the auto one.
     Ambient light sensors are usually not accurate enough.
     With the help of the textual description,
     you probably can do a better job than the built-in ambient light sensors.
@@ -53,4 +53,5 @@
     the same exposure value using the ambient light sensor\'s illumination reading.
   </string>
   <string name="help_menu_title">Help</string>
+  <string name="road_map">Road map: http://wiki.github.com/kailuowang/LightMeter/road-map</string>
 </resources>
