--- a/LightMeter/res/values/strings.xml
+++ b/LightMeter/res/values/strings.xml
@@ -7,6 +7,7 @@
   <string name="aperture_spinner_prompt">Please set aperture</string>
   <string name="iso_spinner_prompt">Please set ISO</string>
   <string name="exposure_spinner_prompt">Please set EV setting</string>
+  <string name="shutter_speed_spinner_prompt">Please set Shutter Speed</string>
   <string name="copyright">copyright © 2010 Kailuo Wang</string>
   <string name="version">Version 1.01a</string>
   <string name="about">About</string>
