--- a/LightMeter/res/values/strings.xml
+++ b/LightMeter/res/values/strings.xml
@@ -8,6 +8,8 @@
   <string name="iso_spinner_prompt">Please set ISO</string>
   <string name="exposure_spinner_prompt">Please set EV setting</string>
   <string name="shutter_speed_spinner_prompt">Please set Shutter Speed</string>
+  <string name="focal_length_spinner_prompt">Please select focal length</string>
+
   <string name="copyright">copyright © 2010 Kailuo Wang</string>
   <string name="version">Version 1.1Beta</string>
   <string name="about">About</string>
