--- a/LightMeter/res/values/strings.xml
+++ b/LightMeter/res/values/strings.xml
@@ -3,7 +3,7 @@
   <string name="hello">Welcome!</string>
   <string name="pause">Lock</string>
   <string name="continue_btn">Unlock</string>
-  <string name="app_name">Light Meter</string>
+  <string name="app_name">Photography Assistant</string>
   <string name="aperture_spinner_prompt">Please set aperture</string>
   <string name="iso_spinner_prompt">Please set ISO</string>
   <string name="exposure_spinner_prompt">Please set EV setting</string>
