--- a/LightMeter/res/values/strings.xml
+++ b/LightMeter/res/values/strings.xml
@@ -14,7 +14,7 @@
   <string name="version">Version 1.5Beta</string>
   <string name="about">About</string>
   <string name="ok">OK</string>
-  <string name="photo_website">Website: http://kaipic.com</string>
+  <string name="photo_website">Online Gallery: http://kaipic.com</string>
   <string name="blog_website">Blog: http://kailuowang.com</string>
   <string name="twitter">Twitter: @kailuowang</string>
   <string name="calibrate">Calibrate</string>
@@ -65,4 +65,5 @@
   Av is the very basic that we probably use most often. Sv can be used when shooting video.
     M is developed so that this app can work with other light meters. In M mode, this App is mainly for depth of field calculation.
   </string>
+  <string name="Author">Author: Kailuo Wang</string>
 </resources>
