--- a/LightMeter/res/values/strings.xml
+++ b/LightMeter/res/values/strings.xml
@@ -14,6 +14,7 @@
   <string name="version">Version 1.5Beta</string>
   <string name="about">About</string>
   <string name="ok">OK</string>
+  <string name="cancel">Cancel</string>
   <string name="photo_website">Online Gallery: http://kaipic.com</string>
   <string name="blog_website">Blog: http://kailuowang.com</string>
   <string name="twitter">Twitter: @kailuowang</string>
@@ -66,4 +67,6 @@
     M is developed so that this app can work with other light meters. In M mode, this App is mainly for depth of field calculation.
   </string>
   <string name="Author">Author: Kailuo Wang</string>
+  <string name="category_spinner_prompt">Select the category of the scenario</string>
+  <string name="scenario_spinner_prompt">Select the light scenario</string>
 </resources>
