--- a/LightMeter/res/values/strings.xml
+++ b/LightMeter/res/values/strings.xml
@@ -3,7 +3,7 @@
   <string name="hello">Welcome!</string>
   <string name="pause">Lock</string>
   <string name="continue_btn">Unlock</string>
-  <string name="app_name">Photography Assistant (Beta)</string>
+  <string name="app_name">Photography Assistant</string>
   <string name="aperture_spinner_prompt">Please set aperture</string>
   <string name="iso_spinner_prompt">Please set ISO</string>
   <string name="exposure_spinner_prompt">Please set EV setting</string>
@@ -11,16 +11,16 @@
   <string name="focal_length_spinner_prompt">Please select focal length</string>
 
   <string name="copyright">copyright © 2010 Kailuo Wang</string>
-  <string name="version">Version 1.5Beta</string>
+  <string name="version">Version 1.5</string>
   <string name="about">About</string>
   <string name="ok">OK</string>
   <string name="cancel">Cancel</string>
-  <string name="photo_website">Online Gallery: http://kaipic.com</string>
-  <string name="blog_website">Blog: http://kailuowang.com</string>
+  <string name="photo_website">Online Gallery: http://kailuowang.com</string>
+  <string name="blog_website">Blog: http://kailuowang.blogspot.com</string>
   <string name="twitter">Twitter: @kailuowang</string>
   <string name="calibrate">Calibrate</string>
   <string name="help_introduction">Photography Assistant provides exposure setting calculation and depth of field calculation.
-    It can use the built-in ambient light sensor reading or manually set values to get Exposure Values.
+    It was designed mostly to use with film cameras. It also tries to take advantage of the ambient light sensor on the phone.
   </string>
   <string name="help_disclaimer">Ambient light sensor, if your phone has one,
     could be very inaccurate. Manual exposure setting is preferred for accuracy.
